--- a/public/index.slim
+++ b/public/index.slim
@@ -1,2 +1,20 @@
+doctype html
 html
-span Soon.
+  head
+    title Found You
+    meta http-equiv="Content-Type" content="text/html; charset=utf-8"
+    meta name="keywords" content="Group Buddies FoundYou Found You Braga"
+    meta name="author" content="Group Buddies"
+    meta encoding="utf-8"
+    link rel="stylesheet" type="text/css" href="css/main.css"
+    link rel="shortcut icon" href="/favicon.ico"
+
+  body
+    h1 Markup examples
+
+    #content
+      p This example shows you how a basic Slim file looks like.
+
+
+    div id="footer" Copyright © GB
+
