--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,265 @@
 body {
-  background: red;
-  padding: 100px; }
+  padding: 0;
+  margin: 0; }
+
+.background {
+  background: transparent url("../images/background.jpg") no-repeat center;
+  width: 100%;
+  height: 800px; }
+
+header {
+  width: 960px;
+  margin: auto;
+  padding-top: 50px; }
+
+.next_event {
+  width: 360px;
+  height: 300px;
+  background: white;
+  border-radius: 6px;
+  margin: auto;
+  margin-top: 50px; }
+  .next_event h1 {
+    color: #333333;
+    font-size: 1.7em;
+    line-height: 2.5em;
+    font-family: "PT Sans";
+    margin-left: 30px; }
+
+.top_bar {
+  display: block;
+  background-color: #5a86c4; }
+  .top_bar section {
+    margin: auto;
+    margin-bottom: 30px;
+    width: 960px; }
+
+.content {
+  width: 960px;
+  margin: auto;
+  margin-top: 50px;
+  text-align: center; }
+  .content h1 {
+    margin-bottom: 20px; }
+  .content .city {
+    width: 90%;
+    text-align: left;
+    font-weight: normal;
+    font-size: 1em;
+    clear: both;
+    margin: auto; }
+  .content .date {
+    width: 90%;
+    text-align: left;
+    font-weight: normal;
+    font-size: 1em;
+    clear: both;
+    margin: auto;
+    margin-bottom: 30px; }
+
+.local {
+  color: #5a86c4;
+  font-size: 1.2em;
+  line-height: 1.5em;
+  font-family: "PT Sans";
+  text-align: left;
+  font-weight: bold;
+  margin-left: 15px;
+  display: inline-block;
+  float: left; }
+  .local:hover {
+    text-decoration: underline; }
+
+.geo {
+  display: inline-block;
+  float: left;
+  margin-left: 15px;
+  margin-top: 5px; }
+
+hr {
+  width: 90%;
+  margin: 20px; }
+
+.left_column {
+  float: left;
+  width: 380px;
+  border: 1px solid #cccccc;
+  border-radius: 6px;
+  padding-bottom: 30px; }
+  .left_column h1 {
+    background-color: #5a86c4;
+    color: white;
+    font-size: 1.7em;
+    line-height: 1.5em;
+    font-family: "PT Sans";
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    margin-top: 0px;
+    border-radius: 6px 6px 0px 0px; }
+
+.right_column {
+  float: right;
+  width: 380px;
+  border: 1px solid #cccccc;
+  border-radius: 6px;
+  padding-bottom: 30px; }
+  .right_column h1 {
+    background-color: #5a86c4;
+    color: white;
+    font-size: 1.7em;
+    line-height: 1.5em;
+    font-family: "PT Sans";
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    margin-top: 0px;
+    border-radius: 6px 6px 0px 0px; }
+
+ul {
+  width: 90%; }
+  ul li {
+    list-style-type: none;
+    color: #999999;
+    font-size: 1.3em;
+    line-height: 1.5em;
+    font-family: "PT Sans";
+    text-align: left; }
+
+footer {
+  clear: both;
+  width: 960px;
+  margin: auto; }
+
+.organization {
+  width: 50%;
+  margin: auto;
+  float: left;
+  display: inline-block; }
+  .organization h1 {
+    color: #5a86c4;
+    font-size: 2em;
+    line-height: 2em;
+    font-family: "PT Sans"; }
+    .organization h1 img {
+      display: block;
+      width: 100%; }
+
+.social {
+  width: 50%;
+  margin: auto;
+  text-align: left;
+  float: left;
+  display: inline-block; }
+  .social h1 {
+    color: #5a86c4;
+    font-size: 2em;
+    line-height: 2em;
+    font-family: "PT Sans"; }
+  .social #facebook {
+    background: transparent url("images/facebook.png") no-repeat center;
+    background: transparent url("images/twitter.png") no-repeat center; }
+
+.gb {
+  clear: both;
+  text-align: center;
+  display: block; }
+
+.city {
+  margin-left: 30px;
+  color: #666666;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  font-family: "PT Sans";
+  font-weight: bold;
+  width: 100%;
+  display: block; }
+
+.date {
+  margin-left: 30px;
+  color: #999999;
+  font-size: 1.3em;
+  line-height: 1.5em;
+  font-family: "PT Sans";
+  width: 100%;
+  display: block; }
+
+a {
+  display: block;
+  text-decoration: none; }
+
+.link {
+  font-style: italic;
+  color: #5a86c4;
+  font-size: 1em;
+  line-height: 1em;
+  font-family: "PT Sans";
+  margin-top: 30px;
+  text-align: center;
+  width: 100%;
+  text-decoration: none; }
+  .link:hover {
+    text-decoration: underline; }
+
+.btn {
+  background-color: #5a86c4;
+  width: 300px;
+  height: 60px;
+  margin: auto;
+  margin-top: 30px;
+  border-radius: 6px;
+  box-shadow: 0px 5px 0px #4a6ea6;
+  display: block;
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  font-size: 1.3em;
+  line-height: 2.5em;
+  font-family: "PT Sans";
+  font-style: normal; }
+  .btn:hover {
+    background-color: #547db9; }
+  .btn:active {
+    margin-top: 35px;
+    box-shadow: 0px 0px 0px; }
+
+.members {
+  clear: both;
+  margin: auto;
+  padding-top: 50px;
+  width: 960px;
+  text-align: center; }
+
+.row1 {
+  width: 100%; }
+  .row1 h1 {
+    color: #5a86c4;
+    font-size: 2em;
+    line-height: 2em;
+    font-family: "PT Sans"; }
+
+.member_logo {
+  width: 220px;
+  height: 220px;
+  margin: 10px;
+  margin-top: 50px;
+  background-color: #999999;
+  float: left; }
+
+h1 {
+  width: 960px;
+  margin: auto;
+  margin-top: 50px;
+  color: white;
+  font-size: 2em;
+  line-height: 1.5em;
+  font-family: "PT Sans"; }
+
+h2 {
+  width: 90%;
+  margin: auto;
+  text-align: left;
+  color: #666666;
+  font-size: 1.3em;
+  line-height: 1.5em;
+  font-family: "PT Sans"; }
