--- a/public/index.slim
+++ b/public/index.slim
@@ -14,14 +14,15 @@ html
     article.background
       section
         header
-         img src="images/logo_big.png" 
+         img src="images/logo_big.png"
         h1 FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.
       section.next_event
         h1 Next Event:
         span.city BRAGA
         span.date 13 January 5:30PM
-        a.btn href="#" Submit your idea
-        a.link href="" Want to have FoundYou on your hometown?
+        a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
+        a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
+
     article.top_bar
       section
           img src="images/logo_small.png"
@@ -33,8 +34,8 @@ html
         a.local href="" Factory Business Center
         img.geo src="images/gps.png"
         span.date 13 January 5:30PM
-        a.btn href="#" Attend
-        a.btn href="#" Submit your idea
+        a.btn href="http://foundyou-braga.eventbrite.pt" Attend
+        a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
 
       section.right_column
         h1 YOUR CITY
@@ -43,7 +44,7 @@ html
           li Strong determination.
           li Good networking skills.
           li Be bold.
-        a.btn href="#" Start a FoundYou
+        a.btn href="http://groupbuddies.typeform.com/to/kwiVxw" Start a FoundYou
 
     article.members
       section.row1
@@ -55,16 +56,16 @@ html
 
 
 
-    footer 
+    footer
       section.organization
         h1 Organization
         img src="images/org1.png"
         img src="images/org2.png"
       section.social
         h1 Links
-        a#facebook href="" 
+        a#facebook href=""
         span.social_link Facebook
-        a#twitter href="" 
+        a#twitter href=""
         span.social_link twitter
       span.gb Copyright © GB
 
