altered social links style

--- a/public/index.slim
+++ b/public/index.slim
@@ -49,7 +49,7 @@ html
     article.members
       section.row1
         h1 Look who stopped by
-        img.member_logo src="images/logo1.png"
+        img.member_logo src="images/timly.png"
         img.member_logo src="images/logo2.png"
         img.member_logo src="images/logo3.png"
         img.member_logo src="images/logo4.png"
@@ -61,11 +61,14 @@ html
         h1 Organization
         img src="images/org1.png"
         img src="images/org2.png"
-      section.social
+      section.social.social_facebook
         h1 Links
-        a#facebook href=""
-        span.social_link Facebook
-        a#twitter href=""
-        span.social_link twitter
-      span.gb Copyright © GB
+        div#facebook
+          img src="images/facebook.png"
+        a href="" facebook.com/foundyou
+      section.social.social_twitter
+        div#twitter
+          img src="images/twitter.png"
+        a href="" twitter.com/foundyou
+      span.gb © 2013 Group Buddies. All rights reserved.
 
