--- a/public/css/main.css
+++ b/public/css/main.css
@@ -130,20 +130,29 @@ footer {
   clear: both;
   width: 960px;
   margin: auto; }
+  footer a {
+    float: left;
+    color: #5a86c4;
+    font-size: 1.3em;
+    line-height: 1.5em;
+    font-family: "PT Sans";
+    margin-left: 10px; }
+    footer a:hover {
+      text-decoration: underline; }
 
 .organization {
   width: 50%;
   margin: auto;
   float: left;
-  display: inline-block; }
+  display: block; }
   .organization h1 {
     color: #5a86c4;
     font-size: 2em;
     line-height: 2em;
     font-family: "PT Sans"; }
-    .organization h1 img {
-      display: block;
-      width: 100%; }
+  .organization img {
+    display: block;
+    margin-bottom: 10px; }
 
 .social {
   width: 50%;
@@ -163,7 +172,16 @@ footer {
 .gb {
   clear: both;
   text-align: center;
-  display: block; }
+  padding-top: 100px;
+  padding-bottom: 20px;
+  display: block;
+  color: #666666;
+  font-size: 0.9em;
+  line-height: 2.5em;
+  font-family: "PT Sans";
+  font-style: normal; }
+  .gb a {
+    color: red; }
 
 .city {
   margin-left: 30px;
@@ -189,7 +207,6 @@ a {
   text-decoration: none; }
 
 .link {
-  font-style: italic;
   color: #5a86c4;
   font-size: 1em;
   line-height: 1em;
@@ -221,6 +238,7 @@ a {
     background-color: #547db9; }
   .btn:active {
     margin-top: 35px;
+    margin-bottom: -5px;
     box-shadow: 0px 0px 0px; }
 
 .members {
@@ -245,6 +263,43 @@ a {
   margin-top: 50px;
   background-color: #999999;
   float: left; }
+
+.social_facebook #facebook {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  border-radius: 6px;
+  display: block;
+  text-decoration: none;
+  float: left;
+  background-color: #4f7bc3;
+  text-align: center; }
+  .social_facebook #facebook img {
+    margin-top: 9px; }
+
+.social_twitter {
+  margin-top: 10px; }
+  .social_twitter #twitter {
+    width: 30px;
+    height: 30px;
+    margin: auto;
+    border-radius: 6px;
+    display: block;
+    text-decoration: none;
+    float: left;
+    background-color: #a5e2f8;
+    text-align: center; }
+    .social_twitter #twitter img {
+      margin-top: 9px; }
+
+.social_link {
+  float: left;
+  color: #5a86c4;
+  font-size: 1.3em;
+  line-height: 1.5em;
+  font-family: "PT Sans";
+  margin-left: 10px;
+  display: block; }
 
 h1 {
   width: 960px;
