--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -127,17 +127,24 @@ footer
   clear: both
   width: $max_width
   margin: auto
+  a
+    float: left
+    +base_font($main_color, 1.3em, 1.5em)
+    margin-left: 10px
+    &:hover
+      text-decoration: underline
+
 
 .organization
   width: 50%
   margin: auto
   float: left
-  display: inline-block
+  display: block
   h1
     +base_font($main_color, 2em, 2em)
-    img
-      display: block
-      width: 100%
+  img
+    display: block
+    margin-bottom: 10px
 
 
 .social
@@ -157,8 +164,13 @@ footer
 .gb
   clear: both
   text-align: center
+  padding-top: 100px
+  padding-bottom: 20px
   display: block
-
+  +base_font(#666, 0.9em, 2.5em)
+  font-style: normal
+  a
+    color: red
 .city
   margin-left: 30px
   +base_font(#666, 1.5em, 1.5em)
@@ -177,7 +189,6 @@ a
   text-decoration: none
 
 .link
-  font-style: italic
   +base_font(#5A86C4,1em,1em)
   margin-top: 30px
   text-align: center
@@ -204,6 +215,7 @@ a
     background-color: #547DB9
   &:active
     margin-top: 35px
+    margin-bottom: -5px
     box-shadow: 0px 0px 0px
 
 .members
@@ -227,6 +239,41 @@ a
   margin-top: 50px
   background-color: #999
   float: left
+
+.social_facebook
+  #facebook
+    width: 30px
+    height: 30px
+    margin: auto
+    border-radius: 6px
+    display: block
+    text-decoration: none
+    float: left
+    background-color: #4F7BC3
+    text-align: center
+    img
+      margin-top: 9px
+.social_twitter
+  margin-top: 10px
+  #twitter
+    width: 30px
+    height: 30px
+    margin: auto
+    border-radius: 6px
+    display: block
+    text-decoration: none
+    float: left
+    background-color: #A5E2F8
+    text-align: center
+    img
+      margin-top: 9px
+
+.social_link
+  float: left
+  +base_font($main_color, 1.3em, 1.5em)
+  margin-left: 10px
+  display: block
+
 
 h1
   width: $max_width
