include images and fixed some margins

--- a/public/index.slim
+++ b/public/index.slim
@@ -7,6 +7,7 @@ html
     meta name="author" content="Group Buddies"
     meta encoding="utf-8"
     link rel="stylesheet" type="text/css" href="css/main.css"
+    link rel="stylesheet" type="text/css" href="css/animate-custom.css"
     link rel="shortcut icon" href="/favicon.ico"
 
   body
@@ -14,14 +15,14 @@ html
     article.background
       section
         header
-         img src="images/logo_big.png"
-        h1 FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.
-      section.next_event
-        h1 Next Event:
-        span.city BRAGA
-        span.date 13 January 5:30PM
-        a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
-        a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
+          img src="images/logo_big.png"
+          h1 FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.
+          section.next_event
+            h1 Next Event:
+            span.city BRAGA
+            span.date 13 January 5:30PM
+            a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
+            a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
 
     article.top_bar
       section
@@ -49,10 +50,14 @@ html
     article.members
       section.row1
         h1 Look who stopped by
-        img.member_logo src="images/timly.png"
-        img.member_logo src="images/logo2.png"
-        img.member_logo src="images/logo3.png"
-        img.member_logo src="images/logo4.png"
+        a href="http://imo.timly.co/"
+          img.member_logo src="images/timly.png"
+        a href="https://tymr.com/"
+          img.member_logo src="images/tymr.png"
+        a href="http://www.blinqer.com/site/index.html#/start"
+          img.member_logo src="images/blinqer.png"
+        a href="http://www.uplaypro.com"
+          img.member_logo src="images/uplay.png"
 
 
 
