reedited images and added border

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -128,9 +128,8 @@ footer
   width: $max_width
   margin: auto
   a
-    float: left
     +base_font($main_color, 1.3em, 1.5em)
-    margin-left: 10px
+    margin-left: 0px
     &:hover
       text-decoration: underline
 
@@ -232,11 +231,12 @@ a
 
 
 .member_logo
-  width: 220px
-  height: 220px
+  width: 218px
+  height: 218px
   margin: 10px
   margin-top: 50px
   float: left
+  border: 1px solid #ccc
 
 .social_facebook
   #facebook
