--- a/public/index.slim
+++ b/public/index.slim
@@ -64,8 +64,10 @@ html
     footer
       section.organization
         h1 Organization
-        img src="images/org1.png"
-        img src="images/org2.png"
+        a href="http://www.factoryworkstyle.com/"
+          img src="images/org1.png"
+        a href="http://www.groupbuddies.com"
+          img src="images/org2.png"
       section.social.social_facebook
         h1 Links
         div#facebook
