--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,12 +131,11 @@ footer {
   width: 960px;
   margin: auto; }
   footer a {
-    float: left;
     color: #5a86c4;
     font-size: 1.3em;
     line-height: 1.5em;
     font-family: "PT Sans";
-    margin-left: 10px; }
+    margin-left: 0px; }
     footer a:hover {
       text-decoration: underline; }
 
@@ -255,11 +254,12 @@ a {
     font-family: "PT Sans"; }
 
 .member_logo {
-  width: 220px;
-  height: 220px;
+  width: 218px;
+  height: 218px;
   margin: 10px;
   margin-top: 50px;
-  float: left; }
+  float: left;
+  border: 1px solid #cccccc; }
 
 .social_facebook #facebook {
   width: 30px;
