--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,7 +259,13 @@ a {
   margin: 10px;
   margin-top: 50px;
   float: left;
-  border: 1px solid #cccccc; }
+  border: 1px solid #cccccc;
+  border-radius: 6px;
+  opacity: 0.8; }
+  .member_logo:hover {
+    zoom: 1;
+    filter: alpha(opacity=100);
+    opacity: 1; }
 
 .social_facebook #facebook {
   width: 30px;
