--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -237,6 +237,13 @@ a
   margin-top: 50px
   float: left
   border: 1px solid #ccc
+  border-radius: 6px
+  opacity: 0.8
+  &:hover
+    zoom: 1
+    filter: alpha(opacity=100)
+    opacity: 1
+
 
 .social_facebook
   #facebook
