fixed some bugs in the margins and floats

--- a/public/index.slim
+++ b/public/index.slim
@@ -19,7 +19,7 @@ html
           section.next_event
             h1 Next Event:
             span.city BRAGA
-            span.date 13 January 5:30PM
+            span.date 13 January / 5:30PM
             a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
             a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
 
@@ -30,10 +30,9 @@ html
       section.left_column
         h1 BRAGA
         img src="images/braga.jpg"
-        hr
         a.local href="" Factory Business Center
         img.geo src="images/gps.png"
-        span.date 13 January 5:30PM
+        span.date 13 January / 5:30PM
         a.btn href="http://foundyou-braga.eventbrite.pt" Attend
         a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
 
@@ -71,10 +70,10 @@ html
         h1 Links
         div#facebook
           img src="images/facebook.png"
-        a href="" facebook.com/foundyou
+        a.social_link href="" facebook.com/foundyou
       section.social.social_twitter
         div#twitter
           img src="images/twitter.png"
-        a href="" twitter.com/foundyou
+        a.social_link href="" twitter.com/foundyou
       span.gb © 2013 Group Buddies. All rights reserved.
 
