--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,10 +51,14 @@ header {
   .content .date {
     width: 90%;
     text-align: left;
-    font-weight: normal;
-    font-size: 1em;
+    font-weight: bold;
+    color: #999999;
+    font-size: 1.2em;
+    line-height: 1.5em;
+    font-family: "PT Sans";
     clear: both;
     margin: auto;
+    margin-left: 15px;
     margin-bottom: 30px; }
 
 .local {
@@ -63,8 +67,9 @@ header {
   line-height: 1.5em;
   font-family: "PT Sans";
   text-align: left;
-  font-weight: bold;
+  margin: auto;
   margin-left: 15px;
+  font-weight: bold;
   display: inline-block;
   float: left; }
   .local:hover {
@@ -72,13 +77,9 @@ header {
 
 .geo {
   display: inline-block;
-  float: left;
   margin-left: 15px;
-  margin-top: 5px; }
-
-hr {
-  width: 90%;
-  margin: 20px; }
+  margin-top: 5px;
+  float: left; }
 
 .left_column {
   float: left;
@@ -152,6 +153,12 @@ footer {
   .organization img {
     display: block;
     margin-bottom: 10px; }
+  .organization a {
+    opacity: 0.8; }
+    .organization a:hover {
+      zoom: 1;
+      filter: alpha(opacity=100);
+      opacity: 1; }
 
 .social {
   width: 50%;
@@ -165,7 +172,8 @@ footer {
     line-height: 2em;
     font-family: "PT Sans"; }
   .social #facebook {
-    background: transparent url("images/facebook.png") no-repeat center;
+    background: transparent url("images/facebook.png") no-repeat center; }
+  .social #twitter {
     background: transparent url("images/twitter.png") no-repeat center; }
 
 .gb {
@@ -196,6 +204,7 @@ footer {
   font-size: 1.3em;
   line-height: 1.5em;
   font-family: "PT Sans";
+  font-weight: bold;
   width: 100%;
   display: block; }
 
@@ -289,20 +298,15 @@ a {
     border-radius: 6px;
     display: block;
     text-decoration: none;
-    float: left;
     background-color: #a5e2f8;
-    text-align: center; }
+    text-align: center;
+    float: left; }
     .social_twitter #twitter img {
       margin-top: 9px; }
 
 .social_link {
   float: left;
-  color: #5a86c4;
-  font-size: 1.3em;
-  line-height: 1.5em;
-  font-family: "PT Sans";
-  margin-left: 10px;
-  display: block; }
+  margin-left: 10px; }
 
 h1 {
   width: 960px;
