--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -59,17 +59,19 @@ header
   .date
     width: 90%
     text-align: left
-    font-weight: normal
-    font-size: 1em
+    font-weight: bold
+    +base_font (#999, 1.2em, 1.5em)
     clear: both
     margin: auto
+    margin-left: 15px
     margin-bottom: 30px
 
 .local
   +base_font ($main_color, 1.2em, 1.5em)
   text-align: left
-  font-weight: bold
+  margin: auto
   margin-left: 15px
+  font-weight: bold
   display: inline-block
   float: left
   &:hover
@@ -77,13 +79,9 @@ header
 
 .geo
   display: inline-block
-  float: left
   margin-left: 15px
   margin-top: 5px
-
-hr
-  width: 90%
-  margin: 20px
+  float: left
 
 .left_column
   float: left
@@ -144,6 +142,12 @@ footer
   img
     display: block
     margin-bottom: 10px
+  a
+    opacity: 0.8
+    &:hover
+      zoom: 1
+      filter: alpha(opacity=100)
+      opacity: 1
 
 
 .social
@@ -156,7 +160,7 @@ footer
     +base_font($main_color, 2em, 2em)
   #facebook
     background: transparent url("images/facebook.png") no-repeat center
-    #twitter
+  #twitter
     background: transparent url("images/twitter.png") no-repeat center
 
 
@@ -179,6 +183,7 @@ footer
 .date
   margin-left: 30px
   +base_font(#999, 1.3em, 1.5em)
+  font-weight: bold
   width: 100%
   display: block
 
@@ -258,8 +263,11 @@ a
     text-align: center
     img
       margin-top: 9px
+
+
 .social_twitter
   margin-top: 10px
+
   #twitter
     width: 30px
     height: 30px
@@ -267,18 +275,15 @@ a
     border-radius: 6px
     display: block
     text-decoration: none
-    float: left
     background-color: #A5E2F8
     text-align: center
+    float: left
     img
       margin-top: 9px
 
 .social_link
   float: left
-  +base_font($main_color, 1.3em, 1.5em)
   margin-left: 10px
-  display: block
-
 
 h1
   width: $max_width
