added opacity transition to top_bar and images

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,9 @@ header {
     margin-left: 30px; }
 
 .top_bar {
+  zoom: 1;
+  filter: alpha(opacity=0);
+  opacity: 0;
   display: block;
   background-color: #5a86c4; }
   .top_bar section {
@@ -160,7 +163,12 @@ footer {
     .organization a:hover {
       zoom: 1;
       filter: alpha(opacity=100);
-      opacity: 1; }
+      opacity: 1;
+      -webkit-transition: all 0.5s ease-in-out;
+      -moz-transition: all 0.5s ease-in-out;
+      -ms-transition: all 0.5s ease-in-out;
+      -o-transition: all 0.5s ease-in-out;
+      transition: all 0.5s ease-in-out; }
 
 .social {
   width: 50%;
@@ -276,7 +284,12 @@ a {
   .member_logo:hover {
     zoom: 1;
     filter: alpha(opacity=100);
-    opacity: 1; }
+    opacity: 1;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out; }
 
 .social_facebook #facebook {
   width: 30px;
