--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -35,8 +35,15 @@ header
     margin-left: 30px
 
 .top_bar
+  zoom: 1
+  filter: alpha(opacity=0)
+  opacity: 0
   display: block
   background-color: $main_color
+
+
+
+
   section
     margin: auto
     margin-bottom: 30px
@@ -150,6 +157,12 @@ footer
       zoom: 1
       filter: alpha(opacity=100)
       opacity: 1
+      -webkit-transition: all 0.5s ease-in-out
+      -moz-transition: all 0.5s ease-in-out
+      -ms-transition: all 0.5s ease-in-out
+      -o-transition: all 0.5s ease-in-out
+      transition: all 0.5s ease-in-out
+
 
 
 .social
@@ -250,6 +263,11 @@ a
     zoom: 1
     filter: alpha(opacity=100)
     opacity: 1
+    -webkit-transition: all 0.5s ease-in-out
+    -moz-transition: all 0.5s ease-in-out
+    -ms-transition: all 0.5s ease-in-out
+    -o-transition: all 0.5s ease-in-out
+    transition: all 0.5s ease-in-out
 
 
 .social_facebook
