--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -208,33 +208,41 @@ a
 
 .link
   +base_font(#5A86C4,1em,1em)
-  margin-top: 30px
+  margin-top: 20px
   text-align: center
   width: 100%
   text-decoration: none
   &:hover
     text-decoration: underline
 
+.button
+  width: 100%
+  text-align: center
+  padding-top: 30px
 
 .btn
   background-color: $main_color
   width: 300px
   height: 60px
   margin: auto
-  margin-top: 30px
   border-radius: 6px
   box-shadow: 0px 5px 0px #4A6EA6
   display: block
   text-decoration: none
   text-align: center
   +base_font(#fff, 1.3em, 3em)
-  font-style: normal
+  font-style: bold
   &:hover
     background-color: #547DB9
   &:active
     margin-top: 35px
     margin-bottom: -5px
     box-shadow: 0px 0px 0px
+
+.subtitle
+  width: 100%
+  text-align: center
+  +base_font(#666, 1em, 1.5em)
 
 .members
   clear: both
@@ -308,11 +316,11 @@ a
 h1
   width: $max_width
   margin: auto
-  margin-top: 50px
+  margin-top: 30px
   +base_font(#ffffff, 2em, 1.5em)
 
 h2
   width: 90%
   margin: auto
-  text-align: left
+  text-align: center
   +base_font(#666, 1.3em, 1.5em)
