--- a/public/index.slim
+++ b/public/index.slim
@@ -32,12 +32,16 @@ html
       section
         header
           img src="images/logo_big.png"
-          h1 FoundYou is a monthly event, that takes place in several places, where entrepreneurs meet to get in touch with new startups and projects looking for co-founders.
+          h1 FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder. 
+          h1 You're most welcome to join in.
+
           section.next_event
             h1 Next Event:
             span.city BRAGA
             span.date 13 January / 5:30PM
-            a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
+            div.button
+              span.subtitle Need some skill to complete your team?
+              a.btn href="http://foundyou-braga.eventbrite.pt" Find a cofounder
             a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
 
     article.top_bar
@@ -50,8 +54,12 @@ html
         a.local href="" Factory Business Center
         img.geo src="images/gps.png"
         span.date 13 January / 5:30PM
-        a.btn href="http://foundyou-braga.eventbrite.pt" Attend
-        a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Submit your idea
+        div.button
+          span.subtitle Need some skill to complete your team?
+          a.btn href="http://foundyou-braga.eventbrite.pt" Find a cofounder
+        div.button
+          span.subtitle Got the skills and the will to succeed?
+          a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Join a project
 
       section.right_column
         h1 YOUR CITY
@@ -60,7 +68,9 @@ html
           li Strong determination.
           li Good networking skills.
           li Be bold.
-        a.btn href="http://groupbuddies.typeform.com/to/kwiVxw" Start a FoundYou
+        div.button
+          span.subtitle Want to create a FoundYou in your town?
+          a.btn href="http://groupbuddies.typeform.com/to/kwiVxw" Start a FoundYou
 
     article.members
       section.row1
