changes to the image links in organization

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -149,9 +149,16 @@ footer
   h1
     +base_font($main_color, 2em, 2em)
   img
+    margin: auto
     display: block
+    margin-top: 30px
     margin-bottom: 10px
   a
+    width: 218px
+    height: 110px
+    margin-top: 20px
+    border: 1px solid #ccc
+    border-radius: 6px
     opacity: 0.8
     &:hover
       zoom: 1
