--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,9 +156,16 @@ footer {
     line-height: 2em;
     font-family: "PT Sans"; }
   .organization img {
+    margin: auto;
     display: block;
+    margin-top: 30px;
     margin-bottom: 10px; }
   .organization a {
+    width: 218px;
+    height: 110px;
+    margin-top: 20px;
+    border: 1px solid #cccccc;
+    border-radius: 6px;
     opacity: 0.8; }
     .organization a:hover {
       zoom: 1;
