--- a/public/index.slim
+++ b/public/index.slim
@@ -7,6 +7,7 @@ html
     meta name="author" content="Group Buddies"
     meta encoding="utf-8"
     link rel="stylesheet" type="text/css" href="css/main.css"
+    link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"
     script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"
     link rel="shortcut icon" href="/favicon.ico"
     javascript:
@@ -51,7 +52,7 @@ html
       section.left_column
         h1 BRAGA
         img src="images/braga.jpg"
-        a.local href="" Factory Business Center
+        a.local href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A" Factory Business Center
         img.geo src="images/gps.png"
         span.date 13 January / 5:30PM
         div.button
@@ -93,6 +94,8 @@ html
           img src="images/org2.png"
         a href="http://www.factoryworkstyle.com/"
           img src="images/org1.png"
+        a href="#"
+          img src="images/org3.png"
       section.social.social_facebook
         h1 Links
         div#facebook
@@ -101,6 +104,9 @@ html
       section.social.social_twitter
         div#twitter
           img src="images/twitter.png"
-        a.social_link href="" twitter.com/foundyou
-      span.gb © 2013 Group Buddies. All rights reserved.
+        a.social_link href="https://www.facebook.com/VDFoundYou" twitter.com/foundyou
+      span.gb 
+        | © 2013 
+        a href="http://www.groupbuddies.com" Group Buddies. 
+        |  All rights reserved.
 
