--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -188,12 +188,15 @@ footer
 
 .gb
   clear: both
+  display: block
   text-align: center
   padding-top: 100px
   padding-bottom: 20px
-  display: block
   +base_font(#666, 0.9em, 2.5em)
   font-style: normal
+  a
+    display: inline-block
+    +base_font($main_color, 1.1em, 2.5em)
 
 .city
   margin-left: 30px
@@ -329,5 +332,6 @@ h1
 h2
   width: 90%
   margin: auto
+  margin-top: 30px
   text-align: center
   +base_font(#666, 1.3em, 1.5em)
