added google fonts

--- a/public/css/main.sass
+++ b/public/css/main.sass
@@ -2,7 +2,7 @@
   color: $color
   font-size: $size
   line-height: $height
-  font-family: "PT Sans"
+  font-family: 'PT Sans', sans-serif
 
 $max_width: 960px
 
