--- a/public/index.slim
+++ b/public/index.slim
@@ -6,6 +6,7 @@ html
     meta name="keywords" content="Group Buddies FoundYou Found You Braga"
     meta name="author" content="Group Buddies"
     meta encoding="utf-8"
+    link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic' rel='stylesheet' type='text/css'
     link rel="stylesheet" type="text/css" href="css/main.css"
     link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"
     script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"
