--- a/public/index.slim
+++ b/public/index.slim
@@ -43,8 +43,8 @@ html
             span.date 13 January / 5:30PM
             div.button
               span.subtitle Need some skill to complete your team?
-              a.btn href="http://foundyou-braga.eventbrite.pt" Find a cofounder
-            a.link href="http://groupbuddies.typeform.com/to/kwiVxw" Want to have FoundYou on your hometown?
+              a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Find a cofounder
+            a.link href="https://groupbuddies.typeform.com/to/SkQkFO" Want to have FoundYou on your hometown?
 
     article.top_bar
       section
@@ -58,10 +58,10 @@ html
         span.date 13 January / 5:30PM
         div.button
           span.subtitle Need some skill to complete your team?
-          a.btn href="http://foundyou-braga.eventbrite.pt" Find a cofounder
+          a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Find a cofounder
         div.button
           span.subtitle Got the skills and the will to succeed?
-          a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Join a project
+          a.btn href="http://foundyou-braga.eventbrite.pt" Join a project
 
       section.right_column
         h1 YOUR CITY
@@ -72,7 +72,7 @@ html
           li Be bold.
         div.button
           span.subtitle Want to create a FoundYou in your town?
-          a.btn href="http://groupbuddies.typeform.com/to/kwiVxw" Start a FoundYou
+          a.btn href="https://groupbuddies.typeform.com/to/SkQkFO" Start a FoundYou
 
     article.members
       section.row1
@@ -105,7 +105,7 @@ html
       section.social.social_twitter
         div#twitter
           img src="images/twitter.png"
-        a.social_link href="https://www.facebook.com/VDFoundYou" twitter.com/foundyou
+        a.social_link href="https://www.twitter.com/VDFoundYou" twitter.com/VDFoundyou
       span.gb 
         | © 2013 
         a href="http://www.groupbuddies.com" Group Buddies. 
