fixed big margin on the right of the image

--- a/public/index.slim
+++ b/public/index.slim
@@ -97,17 +97,18 @@ html
           img src="images/org1.png"
         a href="#"
           img src="images/org3.png"
-      section.social.social_facebook
-        h1 Links
-        div#facebook
-          img src="images/facebook.png"
-        a.social_link href="https://www.facebook.com/VDFoundYou" facebook.com/VDFoundyou
-      section.social.social_twitter
-        div#twitter
-          img src="images/twitter.png"
-        a.social_link href="https://www.twitter.com/VDFoundYou" twitter.com/VDFoundyou
+      section.social
+        section.social_facebook
+          h1 Links
+          div#facebook
+            img src="images/facebook.png"
+          a.social_link href="https://www.facebook.com/VDFoundYou" facebook.com/VDFoundyou
+        section.social_twitter
+          div#twitter
+            img src="images/twitter.png"
+          a.social_link href="https://www.twitter.com/VDFoundYou" twitter.com/VDFoundyou
       span.gb 
-        | © 2013 
-        a href="http://www.groupbuddies.com" Group Buddies. 
-        |  All rights reserved.
+          | © 2013 
+          a href="http://www.groupbuddies.com" Group Buddies. 
+          |  All rights reserved.
 
