--- a/public/index.slim
+++ b/public/index.slim
@@ -34,7 +34,7 @@ html
       section
         header
           img src="images/logo_big.png"
-          h1 FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder. 
+          h1 FoundYou is a monthly event, where entrepreneurs meet to get in touch with new projects, looking for the perfect cofounder.
           h1 You're most welcome to join in.
 
           section.next_event
@@ -82,7 +82,7 @@ html
         a href="https://tymr.com/"
           img.member_logo src="images/tymr.png"
         a href="http://www.blinqer.com/site/index.html#/start"
-          img.member_logo src="images/blinqer.png"
+          img.member_logo src="images/blinqer_logo.png"
         a href="http://www.uplaypro.com"
           img.member_logo src="images/uplay.png"
 
@@ -107,8 +107,8 @@ html
           div#twitter
             img src="images/twitter.png"
           a.social_link href="https://www.twitter.com/VDFoundYou" twitter.com/VDFoundyou
-      span.gb 
-          | © 2013 
-          a href="http://www.groupbuddies.com" Group Buddies. 
+      span.gb
+          | © 2013
+          a href="http://www.groupbuddies.com" Group Buddies.
           |  All rights reserved.
 
