--- a/public/css/main.css
+++ b/public/css/main.css
@@ -104,6 +104,11 @@ h2 {
   margin-top: 15px;
   float: left; }
 
+.meetup {
+  display: inline-block;
+  float: center;
+  margin-top: 30px; }
+
 .left_column {
   float: left;
   width: 380px;
