--- a/public/index.slim
+++ b/public/index.slim
@@ -40,7 +40,7 @@ html
           section.next_event
             h1 Next Event:
             span.city BRAGA
-            span.date 13 January / 5:30PM
+            span.date 7 May / 7:00PM
             div.button
               span.subtitle Need some skill to complete your team?
               a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Find a cofounder
@@ -55,13 +55,15 @@ html
         img src="images/braga.jpg"
         a.local href="https://maps.google.com/maps?q=Factory+|+Business+Center+%26+CoWork,+Braga,+Portugal&hl=en&ll=41.53413,-8.419197&spn=0.004859,0.009645&sll=37.0625,-95.677068&sspn=41.95363,79.013672&oq=factory+business+&hq=Factory+|+Business+Center+%26+CoWork,&hnear=Braga,+Portugal&t=m&z=17&iwloc=A" Factory Business Center
         img.geo src="images/gps.png"
-        span.date 13 January / 5:30PM
+        span.date 7 May / 7:00PM
+        a href="http://www.meetup.com/BragaStartupCoffee/"
+          img.meetup src="images/meetup.png"
         div.button
           span.subtitle Need some skill to complete your team?
           a.btn href="https://groupbuddies.typeform.com/to/kwiVxw" Find a cofounder
         div.button
           span.subtitle Got the skills and the will to succeed?
-          a.btn href="http://foundyou-braga.eventbrite.pt" Join a project
+          a.btn href="http://www.meetup.com/BragaStartupCoffee/" Join a project
 
       section.right_column
         h1 YOUR CITY
